[workspace]
members = [
    "crates/common",
    "crates/server",
    "crates/client",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
bytes              = "1"
dashmap            = "6"
clap               = { version = "4", features = ["derive"] }
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror          = "2"
anyhow             = "1"
common             = { path = "crates/common" }
tokio-tungstenite  = { version = "0.21", features = ["native-tls"] }
futures-util       = { version = "0.3", default-features = false, features = ["sink", "std"] }

[workspace.lints.clippy]
perf        = "warn"
