[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
bytes      = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
base64     = "0.22"
