[package]
name    = "port-repeat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "port-repeat-server"
path = "src/main.rs"

[dependencies]
common     = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
bytes      = { workspace = true }
dashmap    = { workspace = true }
clap       = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror  = { workspace = true }
anyhow            = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util      = { workspace = true }
uuid              = { workspace = true }
axum              = { workspace = true }
httparse          = { workspace = true }
